--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>HydroBloks.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>HydroBloks is a state-of-the-art physical hydrologic model. Its main strength is its ability to combine modularity, high perfomance computing, and hydrologic simularity to provide integrated continental scale hydrologic modeling over continenents at the field scale</p>
 
-<pre><code>$ cd your_repo_root/repo_name
+!<--<pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
 $ git checkout gh-pages
-</code></pre>
+</code></pre>-->!
 
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
