Removed the default info

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Hydrobloks by chaneyn</title>
+    <title>HydroBloks</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -33,12 +33,12 @@
         <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>HydroBloks.</h3>
 
-<p>HydroBloks is a state-of-the-art physical hydrologic model. Its main strength is its ability to combine modularity, high perfomance computing, and hydrologic simularity to provide integrated continental scale hydrologic modeling over continenents at the field scale</p>
+<p>HydroBloks is a state-of-the-art physical hydrologic model. Its main strength is its ability to combine modularity, high perfomance computing, and hydrologic simularity to provide integrated continental scale hydrologic modeling over continenents at the field scale. The python based and module friendly interface makes additions of additional hydrologic processes a fairly seemless process. The model is freely available but please understand that both the model and webpage are in beta phase. Any feedback should be addressed to nchaney at princeton dot edu</p>
 
-!<--<pre><code>$ cd your_repo_root/repo_name
+<!--<pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
 $ git checkout gh-pages
-</code></pre>-->!
+</code></pre>
 
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
@@ -61,10 +61,8 @@ $ git checkout gh-pages
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+--!>
       </section>
-      <footer>
-        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
-      </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
 		
