--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <section>
         <h3>
 <!--<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>HydroBloks.</h3>-->
-<img src="https://github.com/chaneyn/HydroBloks/blob/gh-pages/images/hydrobloks.png" alt="HydroBloks" style="width:304px;height:228px">
+<img src="https://raw.githubusercontent.com/chaneyn/HydroBloks/gh-pages/images/hydrobloks.png" alt="HydroBloks" style="width:304px;height:228px">
 
 <p>HydroBloks is a state-of-the-art physical hydrologic model. Its main strength is its ability to combine modularity, high perfomance computing, and hydrologic simularity to provide integrated continental scale hydrologic modeling over continenents at the field scale. The python based and module friendly interface makes additions of additional hydrologic processes a fairly seemless process. The model is freely available but please understand that both the model and webpage are in beta phase. Any feedback should be addressed to nchaney at princeton dot edu</p>
 
