--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <pre><code>$ pip install numpy
 $ pip install netCDF4
 </code></pre>
-<p>We have the model but we will need the test catchment input data</p>
+<p>Download the data for the Little Washita catchment</p>
 <pre><code>$ wget
 </code></pre>
 <p>We can now run the model for the default settings</p>
