--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </ul>
 
 
-<h3>
+<!--h3>
 <a name="tutorial" class="anchor" href="#tutorial"><span class="octicon octicon-link"></span></a>Tutorial - Little Washita Catchment, Oklahoma
 </h3>
 
@@ -70,7 +70,7 @@ $ pip install netCDF4
 </code></pre>
 <p>We can also change the model parameters</p>
 <pre><code>$ 
-</code></pre>
+</code></pre>--!>
 
 <h3>
 <a name="testing" class="anchor" href="#testing"><span class="octicon octicon-link"></span></a>Testing
